修复：Android行情基金列表代码不加括号